@@ -10,12 +10,12 @@
         "? base >= 1.1.107",
         "AdvancedArtilleryRemotesContinued >= 4.0.3",
         "automatic-station-painter >= 1.0.5",
-        "Automatic_Train_Painter >= 1.1.4",
+        "Automatic_Train_Painter >= 1.2.0",
         "BetterAlertArrows >= 1.0.0",
         "belt-reverserup >= 0.0.9",
-        "BigLight >= 0.1.3",
+        "BigLight >= 0.2.0",
         "Blueprint-Editor >= 3.1.0",
-        "BlueprintSignals_continued >= 0.4.0",
+        "BlueprintSignals_continued >= 0.4.3",
         "BlueprintTools >= 1.2.2",
         "BotPrioritizer >= 0.2.3",
         "BottleneckLite >= 1.2.3",
